--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,16 +16,21 @@
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "multiselect-react-dropdown": "^2.0.25",
+    "pdf-parse": "^1.1.1",
+    "rc-progress": "^3.5.1",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-download-link": "^2.3.0",
     "react-modal": "^3.16.1",
+    "react-pdf": "^7.5.1",
+    "react-responsive-modal": "^6.4.2",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-shimmer": "^3.2.0",
     "react-shimmer-effects": "^1.0.3",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "react-web-modal": "^1.0.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
